@@ -21,8 +21,6 @@ var results = new Object;
 
 var i = 0;
 
-var timeout = null;
-
 // Legacy Mac encodings.
 testEncode('mac', 'U+221A', '%C3');
 testEncode('macintosh', 'U+221A', '%C3');
